// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it does not show a pill when showPill is false 1`] = `
<div
  className="m-tnm-sidebar__header"
>
  <div
    className="m-tnm-sidebar__header-title"
  >
    <h2>
      Nearby Routes
    </h2>
    <div
      className="m-tnm-sidebar__view-change"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      Change view
    </div>
  </div>
</div>
`;

exports[`it renders with a stop selected 1`] = `
<div
  className="m-tnm-sidebar__header"
>
  <div
    className="m-tnm-sidebar__header-title"
  >
    <h2>
      Nearby Routes
    </h2>
    <div
      className="m-tnm-sidebar__view-change"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      Change view
    </div>
  </div>
  <span
    aria-label="Remove filtering by Stop Name"
    className="m-tnm-sidebar__pill"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="m-tnm-sidebar__pill-name"
    >
      Stop Name
    </span>
    <span
      className="m-tnm-sidebar__pill-close fa fa-times-circle"
    />
  </span>
</div>
`;

exports[`it renders with no stop selected 1`] = `
<div
  className="m-tnm-sidebar__header"
>
  <div
    className="m-tnm-sidebar__header-title"
  >
    <h2>
      Nearby Routes
    </h2>
    <div
      className="m-tnm-sidebar__view-change"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      Change view
    </div>
  </div>
</div>
`;
